// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="default"
>
  <main
    className="ant-layout-content {}"
    id="undefined_id"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </main>
</section>
`;

exports[`Render properties.content 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.content"
>
  <main
    className="ant-layout-content {}"
    id="undefined_id"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </main>
</section>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;
